--- a/index.html
+++ b/index.html
@@ -1,81 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html>
-<head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('foret2.jpg');
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil</title>
+
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
+  <style>
+    body, h1 {
+      font-family: "Raleway", sans-serif;
+    }
+
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+
+    .bgimg {
+      background-image: url('foret2.jpg');
+      min-height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+
+    .countdown-box {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-top: 30px;
+      padding: 20px 40px;
+      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.4)
+      display: inline-block;
+      letter-spacing: 2px;
+    }
+
+    .invisible-btn {
+  background: transparent !important;
+  color: transparent !important;
+  border: none !important;
+  padding: 20px 40px; /* zone cliquable similaire à un bouton normal */
+  display: inline-block;
+  cursor: pointer;
 }
-</style>
+
+  </style>
 </head>
+
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     LUCAS LARA PEYRIERE
   </div>
 
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">LE PORTOFILIO ARRIVE BIENTOT</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p id="countdown" class="w3-large w3-center">Chargement...</p>
-  </div>
+  <div class="w3-display-middle w3-center">
+    <h1 id="title" class="w3-jumbo w3-animate-top">
+      LE PORTFOLIO ARRIVE BIENTÔT
+    </h1>
 
-  <div class="w3-display-bottomleft w3-padding-large">
-    ...
-  </div>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+
+    <div id="countdown" class="countdown-box">
+      Chargement...
+    </div>
+
+    <div id="loading-msg" class="countdown-box" style="display:none; margin-top:20px;">
+  <!-- Message de chargement -->
 </div>
 
-<!-- SCRIPT DU COMPTE À REBOURS -->
+    <div id="skip-btn" style="margin-top:20px;">
+  <a href="page d'accueil.html" class="invisible-btn">
+    Passer et accéder au portfolio
+  </a>
+</div>
+
+  </div>
+
+</div>
+
 <script>
-  // Choisis ici la date de fin du décompte
-  const targetDate = new Date("2025-12-06 10:00:00").getTime();
+  const targetDate = new Date("2025-12-17 21:15:00").getTime();
 
   const countdownElement = document.getElementById("countdown");
+  const titleElement = document.getElementById("title");
+  const onlineBtn = document.getElementById("online-btn");
 
-  const timer = setInterval(function() {
+  const timer = setInterval(() => {
     const now = new Date().getTime();
     const distance = targetDate - now;
 
-    // Calcul
+   if (distance <= 0) {
+  clearInterval(timer);
+
+  // Changer le titre
+  titleElement.innerHTML = "LE PORTFOLIO EST DISPONIBLE";
+
+  // Masquer le compteur
+  countdownElement.style.display = "none";
+
+  // Afficher le message de chargement
+  const loadingMsg = document.getElementById("loading-msg");
+  loadingMsg.style.display = "block";
+  loadingMsg.innerHTML = "Préparation de la page...";
+
+  // Afficher le bouton pour passer directement
+  const skipBtn = document.getElementById("skip-btn");
+  skipBtn.style.display = "block";
+
+  // Redirection automatique après 5 secondes si pas cliqué
+  setTimeout(() => {
+    window.location.href = "page d'accueil.html";
+  }, 5000);
+}
+
+
+
+
+
     const days = Math.floor(distance / (1000 * 60 * 60 * 24));
     const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
     const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-    // Affichage
     countdownElement.innerHTML =
-      days + " j " + hours + " h " + minutes + " m " + seconds + " s";
-
-    // Si terminé
-    if (distance < 0) {
-      clearInterval(timer);
-      countdownElement.innerHTML = "C'est en ligne !";
-    }
+      `${days} j ${hours} h ${minutes} m ${seconds} s`;
   }, 1000);
 </script>
 
 </body>
-</html>
-
-
-</body>
-
 </html>
