--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
     <div id="skip-btn" style="margin-top:20px;">
-  <a href="page d'accueil.html" class="invisible-btn">
+  <a href="accueil.html" class="invisible-btn">
     Passer et accéder au portfolio
   </a>
 </div>
@@ -112,7 +112,7 @@
 
   // Redirection automatique après 5 secondes si pas cliqué
   setTimeout(() => {
-    window.location.href = "page d'accueil.html";
+    window.location.href = "accueil.html";
   }, 5000);
 }
 
