--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin-top: 30px;
       padding: 20px 40px;
       border-radius: 12px;
-      background: rgba(255, 255, 255, 0.4)
+      background: rgba(255, 255, 255, 0);
       display: inline-block;
       letter-spacing: 2px;
     }
@@ -82,11 +82,10 @@
 </div>
 
 <script>
-  const targetDate = new Date("2025-12-17 21:55:00").getTime();
+  const targetDate = new Date("2025-12-19 18:00:00").getTime();
 
   const countdownElement = document.getElementById("countdown");
   const titleElement = document.getElementById("title");
-  const onlineBtn = document.getElementById("online-btn");
 
   const timer = setInterval(() => {
     const now = new Date().getTime();
