--- a/accueil.html
+++ b/accueil.html
@@ -95,7 +95,7 @@ body.dark footer { border-color: #333; }
 <div id="background"></div>
 
 <header>
-    <h1>[Votre Nom]</h1>
+    <h1>Lucas Lara Peyrière</h1>
     <nav>
         <a href="accueil.html" class="active">Accueil</a>
         <a href="competences.html">Compétences</a>
@@ -106,12 +106,12 @@ body.dark footer { border-color: #333; }
 </header>
 
 <main>
-    <h2>Bonjour, je suis [Votre Nom]</h2>
+    <h2>Bonjour et bienvenue sur mon portfolio </h2>
     <p>Développeur web passionné, spécialisé dans la création de sites modernes, élégants et interactifs.</p>
     <a href="contact.html" class="button">Me contacter</a>
 </main>
 
-<footer>© 2025 [Votre Nom] – Tous droits réservés</footer>
+<footer>© 2025 Lucas Lara Peyrière – Tous droits réservés</footer>
 
 <script>
 const toggle = document.querySelector('.theme-toggle');
