--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,28 @@
 <style>
 :root {
     --primary: #4f46e5;
+    --secondary: #ff6584;
     --light-bg: #f5f5f5;
     --dark-bg: #121212;
-    --light-card: #fff;
-    --dark-card: #1e1e1e;
     --text-light: #222;
     --text-dark: #e0e0e0;
 }
-* { box-sizing: border-box; }
 
-body { margin:0; font-family:'Poppins',sans-serif; background:var(--light-bg); color:var(--text-light); transition:0.3s; }
-body.dark { background:var(--dark-bg); color:var(--text-dark); }
+/* Reset et base */
+* { box-sizing: border-box; margin:0; padding:0; }
+body {
+    font-family: 'Poppins', sans-serif;
+    background: var(--light-bg);
+    color: var(--text-light);
+    transition:0.3s;
+}
+body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
-header { position: fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
-padding:20px 50px; background:rgba(255,255,255,0.9); backdrop-filter:blur(10px); border-bottom:1px solid #ccc; z-index:9999; transition:0.3s;}
+header {
+    position: fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
+    padding:20px 50px; background:rgba(255,255,255,0.9); backdrop-filter:blur(10px);
+    border-bottom:1px solid #ccc; z-index:9999; transition:0.3s;
+}
 body.dark header { background:rgba(18,18,18,0.9); border-color:#333; }
 
 header h1 { font-weight:700; font-size:1.8rem; }
@@ -29,35 +37,94 @@ nav a { margin-left:30px; color:inherit; text-decoration:none; font-weight:500; 
 nav a.active::after { content:''; position:absolute; bottom:-5px; left:0; width:100%; height:2px; background:var(--primary); border-radius:2px; }
 nav a:hover { color: var(--primary); }
 
-.theme-toggle { padding:10px 20px; border:none; border-radius:50px; background:var(--primary); color:#fff; cursor:pointer; font-weight:600; transition:0.3s; z-index:10000; }
-.theme-toggle:hover { transform:scale(1.05); }
+/* Bouton thème */
+.theme-toggle {
+    padding:10px 20px;
+    border:none;
+    border-radius:50px;
+    background: linear-gradient(45deg, var(--primary), var(--secondary));
+    color:#fff;
+    cursor:pointer;
+    font-weight:600;
+    transition: transform 0.3s, box-shadow 0.3s;
+    z-index:10000;
+}
+.theme-toggle:hover {
+    transform: scale(1.2) rotate(10deg);
+    box-shadow: 0 0 20px rgba(79,70,229,0.5);
+}
+body.dark .theme-toggle:hover {
+    box-shadow: 0 0 25px rgba(255,101,132,0.6);
+}
 
-main { padding:120px 20px 50px 20px; max-width:600px; margin:auto; }
-section { opacity:0; transform:translateY(50px); transition:all 0.8s ease-out; }
-section.show { opacity:1; transform:translateY(0); }
-section h2 { font-size:2.5rem; margin-bottom:20px; text-align:center; }
+/* Main */
+main { padding:140px 20px 50px; max-width:600px; margin:auto; text-align:center; }
+h2 { font-size:2.5rem; margin-bottom:20px; }
+form { display:flex; flex-direction:column; gap:20px; margin-top:20px; }
+input, textarea {
+    padding:15px;
+    border-radius:10px;
+    border:1px solid #ccc;
+    font-size:1rem;
+    width:100%;
+    transition:0.3s;
+}
+input:focus, textarea:focus { border-color: var(--primary); outline:none; }
 
-form { display:flex; flex-direction:column; gap:15px; }
-input, textarea { padding:12px 15px; border-radius:10px; border:1px solid #ccc; font-size:1rem; width:100%; background:#fff; color:#222; transition:0.3s; }
-body.dark input, body.dark textarea { background:#1e1e1e; color:#e0e0e0; border:1px solid #555; }
-input:focus, textarea:focus { outline:none; border-color:var(--primary); box-shadow:0 0 5px rgba(79,70,229,0.5); }
-textarea { min-height:150px; resize:vertical; }
+/* Bouton Envoyer */
+.submit-btn {
+    padding:15px 40px;
+    border-radius:50px;
+    background: linear-gradient(90deg, var(--primary), var(--secondary));
+    color:#fff;
+    font-weight:600;
+    border:none;
+    cursor:pointer;
+    transition: transform .3s, box-shadow .3s;
+    position: relative;
+    overflow: hidden;
+}
+.submit-btn:hover {
+    transform: scale(1.1) translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.25);
+}
+.submit-btn::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: rgba(255,255,255,0.2);
+    transform: rotate(45deg);
+    transition: .5s;
+}
+.submit-btn:hover::after {
+    left: 100%;
+    top: 100%;
+}
 
-button.form-button { padding:15px 30px; border:none; border-radius:50px; background:var(--primary); color:#fff; font-weight:600; cursor:pointer; transition:0.3s; }
-button.form-button:hover { transform:scale(1.05); }
-
-.success-message { display:none; color:green; text-align:center; margin-top:10px; }
+/* Message de succès */
+.message {
+    display:none;
+    color: green;
+    font-weight:600;
+    margin-top:10px;
+}
 
 footer { text-align:center; padding:30px 0; border-top:1px solid #ccc; margin-top:50px; }
 body.dark footer { border-color:#333; }
 
-@media(max-width:768px){ header{padding:15px 20px;} nav a{margin-left:15px;font-size:0.9rem;} }
+@media(max-width:768px) {
+    header { padding:15px 20px; }
+    nav a { margin-left:15px; font-size:0.9rem; }
+}
 </style>
 </head>
 <body>
 
 <header>
-<h1>[Votre Nom]</h1>
+<h1>Lucas Lara Peyrière</h1>
 <nav>
     <a href="accueil.html">Accueil</a>
     <a href="competences.html">Compétences</a>
@@ -68,42 +135,54 @@ body.dark footer { border-color:#333; }
 </header>
 
 <main>
-<section>
 <h2>Contactez-moi</h2>
-<form id="contactForm">
-<input type="text" name="name" placeholder="Votre nom" required>
-<input type="email" name="email" placeholder="Votre email" required>
-<input type="text" name="subject" placeholder="Sujet" required>
-<textarea name="message" placeholder="Votre message" required></textarea>
-<button type="submit" class="form-button">Envoyer</button>
-<p class="success-message" id="successMessage">Merci ! Votre message a été envoyé.</p>
+
+<form id="contact-form">
+    <input type="text" name="name" placeholder="Nom" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <textarea name="message" rows="5" placeholder="Message" required></textarea>
+    <button type="submit" class="submit-btn">Envoyer</button>
 </form>
-</section>
+
+<div class="message" id="success-message">Merci ! Votre message a été envoyé.</div>
 </main>
 
 <footer>
-&copy; 2025 [Votre Nom] - Tous droits réservés
+&copy; 2025 Lucas Lara Peyrière - Tous droits réservés
 </footer>
 
 <script>
+// Theme toggle
 const toggle = document.querySelector('.theme-toggle');
-toggle.addEventListener('click', ()=>{ document.body.classList.toggle('dark'); toggle.textContent = document.body.classList.contains('dark')?'☀️':'🌙'; });
+toggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark');
+    toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+});
 
-const sections = document.querySelectorAll('section');
-const observer = new IntersectionObserver(entries=>{ entries.forEach(entry=>{ if(entry.isIntersecting){ entry.target.classList.add('show'); } }); },{threshold:0.2});
-sections.forEach(sec=>observer.observe(sec));
+// Formspree AJAX
+const form = document.getElementById('contact-form');
+const msg = document.getElementById('success-message');
 
-// Formulaire
-const form = document.getElementById('contactForm');
-const successMessage = document.getElementById('successMessage');
-form.addEventListener('submit', function(e){
+form.addEventListener('submit', async (e) => {
     e.preventDefault();
-    const name=form.name.value.trim(), email=form.email.value.trim(), subject=form.subject.value.trim(), message=form.message.value.trim();
-    if(!name||!email||!subject||!message){ alert("Merci de remplir tous les champs !"); return; }
-    console.log("Nom:",name,"Email:",email,"Sujet:",subject,"Message:",message);
-    form.reset(); successMessage.style.display="block";
-    setTimeout(()=>{successMessage.style.display="none";},5000);
+    const formData = new FormData(form);
+    try {
+        const response = await fetch('https://formspree.io/f/xlgrrnrj', {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+        });
+        if(response.ok){
+            msg.style.display = 'block';
+            form.reset();
+        } else {
+            alert('Erreur lors de l’envoi, veuillez réessayer.');
+        }
+    } catch(error) {
+        alert('Erreur lors de l’envoi, veuillez réessayer.');
+    }
 });
 </script>
+
 </body>
 </html>
