--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
     --dark-bg: #121212;
     --text-light: #222;
     --text-dark: #e0e0e0;
+    --glow-light: rgba(79,70,229,0.5);
+    --glow-dark: rgba(255,101,132,0.6);
 }
 
 /* Reset et base */
@@ -32,57 +34,40 @@ header {
 }
 body.dark header { background:rgba(18,18,18,0.9); border-color:#333; }
 
-header h1 { font-weight:700; font-size:1.8rem; }
-nav a { margin-left:30px; color:inherit; text-decoration:none; font-weight:500; position:relative; }
+header h1 { font-weight:700; font-size:1.8rem; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
+nav a { margin-left:30px; color:inherit; text-decoration:none; font-weight:500; position:relative; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
 nav a.active::after { content:''; position:absolute; bottom:-5px; left:0; width:100%; height:2px; background:var(--primary); border-radius:2px; }
 nav a:hover { color: var(--primary); }
 
-/* Bouton thème */
 .theme-toggle {
-    padding:10px 20px;
-    border:none;
-    border-radius:50px;
+    padding:10px 20px; border:none; border-radius:50px;
     background: linear-gradient(45deg, var(--primary), var(--secondary));
-    color:#fff;
-    cursor:pointer;
-    font-weight:600;
+    color:#fff; cursor:pointer; font-weight:600;
     transition: transform 0.3s, box-shadow 0.3s;
+    opacity:0; transform:translateY(40px);
     z-index:10000;
 }
-.theme-toggle:hover {
-    transform: scale(1.2) rotate(10deg);
-    box-shadow: 0 0 20px rgba(79,70,229,0.5);
-}
-body.dark .theme-toggle:hover {
-    box-shadow: 0 0 25px rgba(255,101,132,0.6);
-}
+.theme-toggle:hover { transform: scale(1.2) rotate(10deg); box-shadow: 0 0 20px var(--glow-light); }
+body.dark .theme-toggle:hover { box-shadow: 0 0 25px var(--glow-dark); }
 
-/* Main */
 main { padding:140px 20px 50px; max-width:600px; margin:auto; text-align:center; }
-h2 { font-size:2.5rem; margin-bottom:20px; }
-form { display:flex; flex-direction:column; gap:20px; margin-top:20px; }
+h2 { font-size:2.5rem; margin-bottom:20px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
+/* Néon pour h2 */
+h2.show { opacity:1; transform:translateY(0); text-shadow:0 0 5px var(--glow-light),0 0 10px var(--glow-light); }
+body.dark h2.show { text-shadow:0 0 5px var(--glow-dark),0 0 10px var(--glow-dark); }
+
+form { display:flex; flex-direction:column; gap:20px; margin-top:20px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
+form.show { opacity:1; transform:translateY(0); }
+
 input, textarea {
-    padding:15px;
-    border-radius:10px;
-    border:1px solid #ccc;
-    font-size:1rem;
-    width:100%;
+    padding:15px; border-radius:10px; border:1px solid #ccc; font-size:1rem; width:100%;
     transition:0.3s;
 }
 input:focus, textarea:focus { border-color: var(--primary); outline:none; }
 
-/* Bouton Envoyer */
 .submit-btn {
-    padding:15px 40px;
-    border-radius:50px;
-    background: linear-gradient(90deg, var(--primary), var(--secondary));
-    color:#fff;
-    font-weight:600;
-    border:none;
-    cursor:pointer;
-    transition: transform .3s, box-shadow .3s;
-    position: relative;
-    overflow: hidden;
+    padding:15px 40px; border-radius:50px; background: linear-gradient(90deg, var(--primary), var(--secondary));
+    color:#fff; font-weight:600; border:none; cursor:pointer; transition: transform .3s, box-shadow .3s; position: relative; overflow: hidden;
 }
 .submit-btn:hover {
     transform: scale(1.1) translateY(-3px);
@@ -90,30 +75,20 @@ input:focus, textarea:focus { border-color: var(--primary); outline:none; }
 }
 .submit-btn::after {
     content: '';
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    background: rgba(255,255,255,0.2);
-    transform: rotate(45deg);
-    transition: .5s;
+    position: absolute; top: -50%; left: -50%; width: 200%; height: 200%;
+    background: rgba(255,255,255,0.2); transform: rotate(45deg); transition: .5s;
 }
-.submit-btn:hover::after {
-    left: 100%;
-    top: 100%;
-}
+.submit-btn:hover::after { left: 100%; top: 100%; }
 
-/* Message de succès */
-.message {
-    display:none;
-    color: green;
-    font-weight:600;
-    margin-top:10px;
-}
+.message { display:none; color: green; font-weight:600; margin-top:10px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
+.message.show { display:block; opacity:1; transform:translateY(0); }
 
-footer { text-align:center; padding:30px 0; border-top:1px solid #ccc; margin-top:50px; }
+footer {
+    text-align:center; padding:30px 0; border-top:1px solid #ccc; margin-top:50px;
+    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+}
 body.dark footer { border-color:#333; }
+footer.show { opacity:1; transform:translateY(0); }
 
 @media(max-width:768px) {
     header { padding:15px 20px; }
@@ -173,14 +148,29 @@ form.addEventListener('submit', async (e) => {
             headers: { 'Accept': 'application/json' }
         });
         if(response.ok){
-            msg.style.display = 'block';
+            msg.classList.add('show');
             form.reset();
-        } else {
-            alert('Erreur lors de l’envoi, veuillez réessayer.');
-        }
-    } catch(error) {
-        alert('Erreur lors de l’envoi, veuillez réessayer.');
-    }
+        } else { alert('Erreur lors de l’envoi, veuillez réessayer.'); }
+    } catch(error) { alert('Erreur lors de l’envoi, veuillez réessayer.'); }
+});
+
+// Apparition progressive de tous les textes
+window.addEventListener('load', () => {
+    const headerH1 = document.querySelector('header h1');
+    const navLinks = document.querySelectorAll('nav a');
+    const toggleBtn = document.querySelector('.theme-toggle');
+    const h2 = document.querySelector('main h2');
+    const formEl = document.querySelector('form');
+    const footer = document.querySelector('footer');
+
+    setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
+    navLinks.forEach((link, i) => {
+        setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i*100);
+    });
+    setTimeout(() => { toggleBtn.style.opacity = 1; toggleBtn.style.transform = 'translateY(0)'; }, 700);
+    setTimeout(() => { h2.classList.add('show'); }, 900);
+    setTimeout(() => { formEl.classList.add('show'); }, 1100);
+    setTimeout(() => { footer.classList.add('show'); }, 1500);
 });
 </script>
 
