--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
     <div id="skip-btn" style="margin-top:20px;">
-  <a href="accueil.html" class="invisible-btn">
+  <a href="accueil_fr.html" class="invisible-btn">
     Passer et accéder au portfolio
   </a>
 </div>
@@ -82,7 +82,7 @@
 </div>
 
 <script>
-  const targetDate = new Date("2025-12-19 18:00:00").getTime();
+  const targetDate = new Date("2026-01-19 18:00:00").getTime();
 
   const countdownElement = document.getElementById("countdown");
   const titleElement = document.getElementById("title");
