--- a/competences_fr.html
+++ b/competences_fr.html
@@ -67,6 +67,13 @@ nav a::after {
 body.dark nav a::after { background: var(--secondary); }
 nav a:hover::after, nav a.active::after { width: 100%; }
 
+/* Conteneur boutons thème et langue côte à côte */
+.header-buttons {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
 .theme-toggle,
 .lang-toggle {
     padding: 10px 20px;
@@ -77,7 +84,6 @@ nav a:hover::after, nav a.active::after { width: 100%; }
     color: white;
     background: linear-gradient(45deg, var(--primary), var(--secondary));
     transition: transform 0.3s, box-shadow 0.3s;
-    margin-left: 15px;
 }
 .theme-toggle:hover,
 .lang-toggle:hover {
@@ -157,15 +163,17 @@ body.dark footer { border-color: #333; }
         <a href="projets_fr.html">Projets</a>
         <a href="contact_fr.html">Contact</a>
     </nav>
-    <button class="theme-toggle">🌙</button>
-    <button class="lang-toggle">ES</button>
+    <div class="header-buttons">
+        <button class="theme-toggle">🌙</button>
+        <button class="lang-toggle">ES</button>
+    </div>
 </header>
 
 <main>
     <h2>Mes Compétences</h2>
     <div class="cards">
         <div class="card">
-            <h3>Programation</h3>
+            <h3>Programmation</h3>
             <p>HTML, CSS, JavaScript, C/C++</p>
         </div>
         <div class="card">
